# fs.ll

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fs.ll.cmake
sample/: sdcard.img
sample/sdcard/: st_benedict.txt
src/: Sample.c
src/Dependency/: fatfs.ffconf_patch.cmake
src/lib/: FileSystem.c  FileSystem.h
src/lib/Platform/ESP32/: CMakeLists.txt  HAL.c  HAL.h  HALConfig.h  PreExecutable.cmake
src/lib/Platform/RP2040/: HAL.c  HAL.h  HALConfig.h  PostExecutable.cmake
src/lib/Platform/Simulator/: HAL.c  HAL.h  HALConfig.h
